# munbon2-backend

./: .env.debug  .env.ec2  .env.ec2-native.example  .env.ec2.example  .env.example  .env.jwt.secret  .env.shared.example  .gitattributes  .gitignore  .trivyignore  API_MANUAL_FRONTEND_COMPLETE.md  API_QUICK_REFERENCE.md  CLAUDE.md  CLAUDE_INSTANCES_MASTER_6.md  CLAUDE_INSTANCE_10_DASHBOARD_BFF.md  CLAUDE_INSTANCE_12_FLOW_MONITORING.md  CLAUDE_INSTANCE_13_INIT_PROMPT.txt  CLAUDE_INSTANCE_14_INIT_PROMPT.txt  CLAUDE_INSTANCE_15_INIT_PROMPT.txt  CLAUDE_INSTANCE_16_INIT_PROMPT.txt  CLAUDE_INSTANCE_17_INIT_PROMPT.txt  CLAUDE_INSTANCE_17_SCHEDULER_FIELD_OPS.md  CLAUDE_INSTANCE_18_INIT_PROMPT.txt  CLAUDE_INSTANCE_1_AOS_WEATHER.md  CLAUDE_INSTANCE_3_EXTERNAL_API.md  CLAUDE_INSTANCE_6_ROS.md  CLAUDE_INSTANCE_EC2_DEPLOYMENT_INIT_PROMPT.txt  CLIENT_INTEGRATION_GUIDE.md  CODEBASE_STRUCTURE.md  CONTAINER_SETUP.md  CREATE_DOCKERHUB_REPOS.md  DATABASE_CONFIGURATION.md  DATABASE_CONSOLIDATION_MAPPING.md  DATABASE_SERVICE_MAPPING.md  DBEAVER_CONNECTION_GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_OPTIONS_DETAILED.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_WORKFLOW_DETAILED.md  DOCKER_HUB_DEPLOYMENT_GUIDE.md  (+128 more)
.claude/: claude_desktop_config.json
api-contracts/: UNIFIED_API_FRONTEND_GUIDE.md  cloudflared-mock-config.yml  docker-compose.mock-tunnel.yml  package-lock.json  package.json  ros-service-api.yaml  setup-mock-server-tunnel.md  setup-permanent-mock-tunnel.sh  start-mock-server-external.sh  start-mock-tunnel.sh
csv_exports/: MIGRATION_SUMMARY.md  disable_triggers_import.sh  export_munbon_dev.sh  fix_timescale_import.sh  import_hypertable_data.py  import_munbon_dev.py  import_munbon_dev_batch.py  import_sensor_readings.sql  import_sensor_readings_schema.sql  import_to_ec2.sh  python_import.py  (+2 more)
shared/python/: README.md  pyproject.toml
shared/python/munbon_shared/: __init__.py  config.py  errors.py  logging.py  middleware.py  models.py  utils.py
templates/python-fastapi/: .env.example  Dockerfile  README.md  pyproject.toml
templates/python-fastapi/app/: main.py
templates/python-fastapi/app/api/v1/: api.py
templates/python-fastapi/app/core/: config.py  logging.py
(+3008 files in other folders)
